# cos

./: CMakeLists.txt  cos.h  cosec.cpp  libtrig.deb
.deb/: build.txt  libtrigonometry.deb
.deb/libtrigonometry/DEBIAN/: control  md5sums  postinst  sha256sums
.deb/libtrigonometry/usr/include/trigonometry/: cos.h  cosec.h
.deb/libtrigonometry/usr/include/trigonometry/crash/: cos.h  cosec.h
CRASH(cos&cosec-tester)/: test$cos&cosec.7z
Trigonometry/: CMakeLists.txt  TrigConfig.cmake  cos.h  cosec.h
docs/: CONTRIBUTING.md  README.md
